# perio-timer-applet

./: .gitignore  GUIDE.md  README.md  install.sh  meson.build
data/: gresources.xml  meson.build
data/colors/: colors.json
data/sounds/: Alarm Clock Digital.oga  Bicycle Bell.oga  Car Seatbelt.oga  Egg Timer.oga  Item Acquired.oga  Toaster Oven.oga
data/style/: style.css
src/: PatternTimer.plugin.in  PatternTimer.vala  PerioTimer.plugin.in  PerioTimerApplet.vala  meson.build
src/Widgets/: Colors.vala  InputManager.vala  MainPopover.vala  PTimer.vala  SoundManager.vala  Stage.vala  TimerAnimation.vala
style/: color_schemes.txt  meson.build
