install_data(
    'style/icons/periotimer-applet-symbolic.svg',
    'style/icons/periotimer-audio-volume-high-symbolic.svg',
    'style/icons/periotimer-audio-volume-muted-symbolic.svg',
    'style/icons/periotimer-media-playlist-repeat-rtl-symbolic.svg',
    'style/icons/periotimer-media-playlist-repeat-disabled-rtl-symbolic.svg',
    'style/icons/periotimer-notification-alert-symbolic.svg',
    'style/icons/periotimer-notification-disabled-symbolic.svg',
    install_dir: join_paths(datadir, 'pixmaps')
)

install_data(
    'sounds/Alarm Clock Digital.oga',
    'sounds/Bicycle Bell.oga',
    'sounds/Car Seatbelt.oga',
    'sounds/Egg Timer.oga',
    'sounds/Item Acquired.oga',
    'sounds/Toaster Oven.oga',
    install_dir: join_paths(datadir, 'sounds', 'perio-timer')
)