install_data(
    'periotimer-audio-volume-high-symbolic.svg',
    'periotimer-audio-volume-muted-symbolic.svg',
    'periotimer-media-playlist-repeat-rtl-symbolic.svg',
    'periotimer-media-playlist-repeat-disabled-rtl-symbolic.svg',
    'periotimer-notification-alert-symbolic.svg',
    'periotimer-notification-disabled-symbolic.svg',
    install_dir: join_paths(datadir, 'pixmaps')
)